[package]
name = "sqlar"
version = "0.0.1"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"
description = "Port of the SQLite Archive Files utility"
license = "MIT"
repository = "https://github.com/badboy/sqlar-rs"

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
chrono = "0.4.19"
env_logger = "0.8.3"
filetime = "0.2.14"
flate2 = "1.0.20"
log = "0.4.14"
walkdir = "2.3.2"
tabwriter = "1.2.1"

[dependencies.rusqlite]
version = "0.25.0"
features = ["functions"]
